--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>uVision C++11 Wizard</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -60,7 +60,7 @@
      <x>0</x>
      <y>0</y>
      <width>405</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
