* added button to clear all extra options for selected cpp files

--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -196,6 +196,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="btnRemoveOpts">
+             <property name="text">
+              <string>Remove Opts</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
         </layout>
